public/css/style.css
html {
    padding: 0px;
}
body {
    background-image:url('/img/bg_main.jpg');
    background-repeat:no-repeat;
    background-attachment:fixed;
    background-size: cover;
}
h1{
    margin:0px;
    font-size:20px;
    color: #31708f;
}
h2 {
    margin: 0px;
}
.index {
    margin: 10px 0px;
    width: 100%;
    text-align: center;
}
.index .logo {
    text-align: center;
    height: 407px;
    width: 628px;
    margin: 0px auto;
    background-image:url('/img/logo.png') ;
    background-repeat: no-repeat;
    z-index: -1;
}
.index .logo  img {
    padding: 220px 0px 0px 0px;
}
.index .fb-login-button {
    margin-left: 170px ;
    text-align: center;
}
.chatbase {
    /*background-color: #B8E4EF;*/
    position: absolute;
    height: auto;
    left: 77%;
    right: 2%;
    top: 15px;
    bottom: 25px;
    display: block;
    box-shadow: 0px 15px 15px rgba(0, 0, 0, 0.5);
    padding-top:10px;
    padding-left:10px;
    padding-bottom:10px;
    padding-right:10px;
}
div.gallery {
    position: absolute;
    height: auto;
    left: 2%;
    right: 25%;
    top: 25px;
    bottom: 25px;
    display: block;
    box-shadow: 0px 15px 15px rgba(0, 0, 0, 0.5);
    padding-top:10px;
    padding-left:10px;
    padding-bottom:10px;
    padding-right:10px;
}
div.gallery table tr {
    height: 170px;
}
div.gallery table td {
    width: 220px;
}
div.photo {
    width: 200px;
    height: 100px;
    position: relative;
    display: block;
    padding: 10px;
    z-index: 2;
    top: 50px;
}
div.photo img.enlarge {
    width: 42px;
    height: 42px;
    position: absolute;
    display: inline;
    z-index: 1;
    cursor: pointer;
    left: 15px;
    top: 15px;
}
div.photo img.delete {
    width: 21px;
    height: 25px;
    position: absolute;
    display: inline;
    z-index: 1;
    cursor: pointer;
    right: 15px;
    bottom: 5px;
}
div.photo img.photo {
    width: 200px;
    position: absolute;
    z-index: 2;
}
div.photo button.map{
    position: absolute;
    display: block;
    z-index: 1;
    cursor: pointer;
    width: 100px;
    background: -webkit-gradient(linear, left top, left bottom, from(#2B84B3), to(#3B5898));
    height: 22px;
    font-size: 16px;
    font-weight: normal;
    border: 1px solid white;
    color: white;
    cursor: pointer;
    border-radius: 3px;
    font-family: Arial,Helvetica,sans-serif;
    background: transparent;
    left: 63px;
    top: 40px;
}
div.photo button.group{
    position:absolute;
    display: block;
    z-index: 1;
    cursor: pointer;
    width: 100px;
    background: -webkit-gradient(linear, left top, left bottom, from(#2B84B3), to(#3B5898));
    height: 22px;
    font-size: 16px;
    font-weight: normal;
    border: 1px solid white;
    color: white;
    cursor: pointer;
    border-radius: 3px;
    font-family: Arial,Helvetica,sans-serif;
    background: transparent;
    left: 63px;
    top: 70px;
}
div.photo div.date {
    position: absolute;
    display: inline;
    z-index: 1;
    height: 22px;
    font-size: 16px;
    font-weight: normal;
    color: white;
    font-family: Arial,Helvetica,sans-serif;
    background: transparent;
    left: 20px;
    top: 100px;
    width: 100px;
}
/*
div.photo {
    position: relative;
    width: 100%;
    height: auto;
    margin-left:auto;
    margin-right:auto;
    margin-bottom: 2%;
    overflow: hidden;
    top:10px;
}
div.photo img { z-index: 1; }
div.photo div {
    position: absolute;
    left: 0px;
    right: 20px;
    bottom: 4px;
    padding: 4px;
}
div.photo div.blackbg {
    z-index: 2;
    color: #000;
    background-color: #000;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
    filter: alpha(opacity=50);
    opacity: 0.5;
}
div.photo div.date {
    z-index: 3;
    color: #FFFFFF;
    font-family: 'Ubuntu Condensed', cursive;
    font-size: 11pt;
}
div.photo div.geo {
    z-index: 4;
    text-align: right;
    color: #FFFFFF;
    font-family: 'Ubuntu Condensed', cursive;
    font-size: 11pt;
}
div.photo div.geo a {
   text-decoration: none;
   color: #FFFFFF;
}
img.photo {
    width: 200px;
    cursor:pointer;
    box-shadow: 12px 12px 12px rgba(0, 0, 0, 0.5);
    height: auto;
}
*/
.file_upload {
    width: 80%;
    height: 25px;
    cursor: pointer;
    font-size: 16px;
    font-weight: normal;
    border: 1px solid white;
    color: white;
    border-radius: 3px;
    font-family:Arial,Helvetica,sans-serif;
    background: -webkit-gradient(linear, left top, right bottom, from(#4D7E8D), to(#E1855C));
}
div.create_event_box {
    display:none;
}
div.create_event {
    width: 600px;
    overflow: auto;
}
div.create_event table {
    width: 100%;
    border: solid 1px;
}
a.create_event {
    visibility: hidden;
}
button.upload {
    width: 100px;
    background: -webkit-gradient(linear, left top, left bottom, from(#2B84B3), to(#3B5898));
    height: 22px;
    font-size: 16px;
    font-weight: normal;
    border: 1px solid white;
    color: white;
    cursor: pointer;
    border-radius: 3px;
    font-family:Arial,Helvetica,sans-serif;
    background: transparent;
}
.title {
    width: 95%;
}
.location {
    width: 80%;
}
.button_Post_Status {
    width: 100px;
    background: -webkit-gradient(linear, left top, left bottom, from(#2B84B3), to(#3B5898));
    height: 22px;
    font-size: 16px;
    font-weight: normal;
    border: 1px solid #2B84B3;
    color: white;
    cursor: pointer;
    border-radius: 3px;
}
.button_send {
    width: 100px;
    background: -webkit-gradient(linear, left top, left bottom, from(#2B84B3), to(#3B5898));
    height: 22px;
    font-size: 16px;
    font-weight: normal;
    border: 1px solid white;
    color: white;
    cursor: pointer;
    border-radius: 3px;
    font-family:Arial,Helvetica,sans-serif;
    background: transparent;
}
#logout_button {
    width: 100px;
    background: -webkit-gradient(linear, left top, left bottom, from(#2B84B3), to(#3B5898));
    height: 22px;
    font-size: 16px;
    font-weight: normal;
    border: 1px solid white;
    color: white;
    cursor: pointer;
    border-radius: 3px;
    font-family:Arial,Helvetica,sans-serif;
    background: transparent;
}
.chat_message {
    width:100%;
    left:5%;
    right:5%;
    height:50px;
    background: transparent;
    color: white;
    font-size: 16px;
    font-weight: normal;
    border: 1px solid white;
    font-family:Arial,Helvetica,sans-serif;
    border-radius: 3px;
}
/* do not group these rules */
*::-webkit-input-placeholder {
  color: #E0E0E0;
}
*:-moz-placeholder {
  color: #E0E0E0;
}
*:-ms-input-placeholder { /* IE10+ */
  color: #E0E0E0;
}
div.chat_history{
    font-family:Arial,Helvetica,sans-serif;
    color: white;
    font-size: 16px;
    font-weight: normal;
    border: 1px solid white;
    height: 250px;
    border-radius: 3px;
}
div.chat_head{
    padding:0px 0px;
    background: transparent;
    color: white;
    font-size: 16px;
    font-weight: normal;
    font-family:Arial,Helvetica,sans-serif;
}
.chat_title{
    padding:0px 0px;
    background: transparent;
    color: white;
    font-size: 30px;
    font-weight: normal;
    font-family: 'Allura', cursive;
}
div.chat_div{
    font-family:inherit;
    font-weight:50;
}
table.chat_history td{
    vertical-align: top;
}
table.chat_history .col_1{
    white-space: nowrap;
}
table.chat_history .col_2{
    width: 5px;
}
img.add_event {
    width: 200px;
    height: 200px;
}
img.banner {
    position:absolute;
    right:1%;
    bottom:1%;
    width: 200px;
    cursor:pointer;
    height: auto;
}
div.gallery_head {
    position:absolute;
    left:50px;
    top:0px;
}
.gallery_title {
    font-size: 50px;
    margin-bottom: 5px;
    margin-top: 5px;
    margin-left: 10px;
    color: white;
    font-family: 'Allura', cursive;
    font-style: normal;
    font-weight: 400;
    z-index: 2;
}
.button_upload {
    width: 100px;
    font-weight: normal;
    border: 1px solid white;
    color: white;
    border-radius: 3px;
    font-family:Arial,Helvetica,sans-serif;
    background: transparent;
    background: -webkit-gradient(linear, left top, right bottom, from(#E1855C), to(#4D7E8D));
    height: 25px;
    cursor: pointer;
    font-size: 16px;
}
/* loading dialog */
div.loading {
    position: absolute;
    width: 100%;
    top: 0px;
    left: 0px;
    bottom: 0px;
    right: 0px;
    display: none;
    background:linear-gradient(to bottom, rgba(33, 65, 80, 0.2), rgba(17, 0, 48, 0.8));
}
div.loading div.loading_img {
    position: relative;
    width: 32px;
    height: 32px;
    margin: 20% auto 0px auto;
}
/* end - loading dialog */
/* alert dialog */
div.base {
    position: absolute;
    width: 100%;
    top: 0px;
    bottom: 0px;
    display: none;
    background:linear-gradient(to bottom, rgba(33, 65, 80, 0.2), rgba(17, 0, 48, 0.8));
    z-index: 100;
}
div.dialog-box {
    position: relative;
    background: #DDDDDD;
    width: 400px;
    height: 180px;
    margin: 200px auto 0px auto;
    border-radius: 10px;
    box-shadow: 0px 1px 16px rgba(0,0,0,0.9);
    border: 2px solid white;
}
div.dialog-head {
    background: #aaaa00;
    width: 100%;
    height: 20px;
    color: white;
    text-align: center;
    padding: 5px 0px 5px 0px;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
    box-shadow: inset 0px 1px 6px rgba(0,0,0,0.8);
    text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
}
div.dialog-textarea {
    text-align: right;
    padding: 4px 20px;
    text-shadow: 1px 1px 1px white;
}
div.dialog-message {
    text-align: left;
    padding: 5px 0px 0px 90px;
    font-size: 10pt;
}
div.dialog-subtext a {
    background-color: #ff8800;
    background-image: linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.2));
    text-decoration: none;
    color: white;
    text-shadow: -1px -1px 2px rgba(0,0,0,0.33);
    border-radius: 4px;
    padding: 2px 5px 4px 5px;
    border: 1px solid #777777;
    box-shadow: inset 0px 1px 2px rgba(255,255,255,0.8);
}
img.icon {
    border-right: 1px solid white;
    border-bottom: 1px solid white;
    box-shadow: -1px -1px 1px rgba(0,0,0,0.9);
    position: absolute;
    left: 10px;
    top: 40px;
    width: 90px;
}
tbody{
    vertical-align: top;
}
/* end - alert dialog */

